--- a/Website/Test/Site.html
+++ b/Website/Test/Site.html
@@ -6,22 +6,18 @@
         <script src = "Site.js"> </script>
     </head>
     <body>
-        <h1>Reese's site</h1>
+        <h1>How to build a computer</h1>
         <h2 id = UCONST>STILL UNDER CONSTRUCTION</h2>
         <hr>
 
-        <p>
-            Hello, this is my site, I can show you how to do some HTML
-            <br>
-            <ul>
-                <li> HTML documents have the file extentions ".html"
-                <li> You start the document with "<!DOCTYPE = HTML>" so that programs that open this file understand what kind of file this is
-                <li> 
-            </ul>
-            <br>
-            ```
-            
-            ```
-        </p>
+        <h2>Deciding what type of computer you want</h2>
+        <p>There are many use cases for a computer</p>
+        <ul>
+            <li> If you want a computer just for basic everyday uses such as emails or watching video the most cost effective option 
+        </ul>
+
+        <h2>General computers</h2>
+
+        <h2>Custome computer</h2>
     </body>
 </html>
