--- a/Website/Wonders of the world/ItzáPage.html
+++ b/Website/Wonders of the world/ItzáPage.html
@@ -26,22 +26,12 @@
 
 	<!--Main info-->
 	<div>
-	    <h1>Description on the Seven Wonders of the World</h1>
-	    <p>In 2000 a Swiss foundation launched a campaign to determine the New Seven Wonders of the World. Given that the original Seven Wonders list was compiled in the 2nd century BCE—and that only one entrant is still standing (the Pyramids of Giza)—it seemed time for an update. And people around the world apparently agreed, as more than 100 million votes were cast on the Internet or by text messaging. The final results, which were announced in 2007, were met with cheers as well as some jeers—a number of prominent contenders, such as Athens’s Acropolis, failed to make the cut. Do you agree with the new list?</p>
+	    <h1>Chichén Itzá</h1>
+	    <p>Chichén Itzá is a Mayan city on the Yucatán Peninsula in Mexico, which flourished in the 9th and 10th centuries CE. Under the Mayan tribe Itzá—who were strongly influenced by the Toltecs—a number of important monuments and temples were built. Among the most notable is the stepped pyramid El Castillo (“The Castle”), which rises 79 feet (24 meters) above the Main Plaza. A testament to the Mayans’ astronomical abilities, the structure features a total of 365 steps, the number of days in the solar year. During the spring and autumnal equinoxes, the setting sun casts shadows on the pyramid that give the appearance of a serpent slithering down the north stairway; at the base is a stone snake head. Life there was not all work and science, however. Chichén Itzá is home to the largest tlachtli (a type of sporting field) in the Americas. On that field the residents played a ritual ball game popular throughout pre-Columbian Mesoamerica.</p>
 	</div>
 
 	<!--Info-->
 	<div>
-	    <ul>
-		<li><a href = "GizaPage.html"><b>Pyramid of Giza</button></b></a></li>
-		<li><a href = "GreatWallPage.html"><b>Great wall of China</b></a></li>
-		<li><a href = "PetraPage.html"><b>Petra</b></a></li>
-		<li><a href = "ColosseumPage.html"><b>The Colosseum</b></a></li>
-		<li><a href = "ItzáPage.html"><b>Chichén Itzá</b></a></li>
-		<li><a href = "PicchuPage.html"><b>Machu Picchu</b></a></li>
-		<li><a href = "MahalPage.html"><b>Taj Mahal</b></a></li>
-		<li><a href = "RedeemerPage.html"><b>Chirst the Redeemer</b></a></li>
-	    </ul>
 	</div>
 
 	<!--Images-->
