--- a/Website/Wonders of the world/PetraPage.html
+++ b/Website/Wonders of the world/PetraPage.html
@@ -26,22 +26,12 @@
 
 	<!--Main info-->
 	<div>
-	    <h1>Description on the Seven Wonders of the World</h1>
-	    <p>In 2000 a Swiss foundation launched a campaign to determine the New Seven Wonders of the World. Given that the original Seven Wonders list was compiled in the 2nd century BCE—and that only one entrant is still standing (the Pyramids of Giza)—it seemed time for an update. And people around the world apparently agreed, as more than 100 million votes were cast on the Internet or by text messaging. The final results, which were announced in 2007, were met with cheers as well as some jeers—a number of prominent contenders, such as Athens’s Acropolis, failed to make the cut. Do you agree with the new list?</p>
+	    <h1>Petra</h1>
+	    <p>The ancient city of Petra, Jordan, is located in a remote valley, nestled among sandstone mountains and cliffs. It was purported to be one of the places where Moses struck a rock and water gushed forth. Later the Nabataeans, an Arab tribe, made it their capital, and during this time it flourished, becoming an important trade center, especially for spices. Noted carvers, the Nabataeans chiseled dwellings, temples, and tombs into the sandstone, which changed color with the shifting sun. In addition, they constructed a water system that allowed for lush gardens and farming. At its height, Petra reportedly had a population of 30,000. The city began to decline, however, as trade routes shifted. A major earthquake in 363 CE caused more difficulty, and after another tremor hit in 551, Petra was gradually abandoned. Although rediscovered in 1912, it was largely ignored by archaeologists until the late 20th century, and many questions remain about the city.</p>
 	</div>
 
 	<!--Info-->
 	<div>
-	    <ul>
-		<li><a href = "GizaPage.html"><b>Pyramid of Giza</button></b></a></li>
-		<li><a href = "GreatWallPage.html"><b>Great wall of China</b></a></li>
-		<li><a href = "PetraPage.html"><b>Petra</b></a></li>
-		<li><a href = "ColosseumPage.html"><b>The Colosseum</b></a></li>
-		<li><a href = "ItzáPage.html"><b>Chichén Itzá</b></a></li>
-		<li><a href = "PicchuPage.html"><b>Machu Picchu</b></a></li>
-		<li><a href = "MahalPage.html"><b>Taj Mahal</b></a></li>
-		<li><a href = "RedeemerPage.html"><b>Chirst the Redeemer</b></a></li>
-	    </ul>
 	</div>
 
 	<!--Images-->
