--- a/Website/Wonders of the world/PicchuPage.html
+++ b/Website/Wonders of the world/PicchuPage.html
@@ -26,22 +26,12 @@
 
 	<!--Main info-->
 	<div>
-	    <h1>Description on the Seven Wonders of the World</h1>
-	    <p>In 2000 a Swiss foundation launched a campaign to determine the New Seven Wonders of the World. Given that the original Seven Wonders list was compiled in the 2nd century BCE—and that only one entrant is still standing (the Pyramids of Giza)—it seemed time for an update. And people around the world apparently agreed, as more than 100 million votes were cast on the Internet or by text messaging. The final results, which were announced in 2007, were met with cheers as well as some jeers—a number of prominent contenders, such as Athens’s Acropolis, failed to make the cut. Do you agree with the new list?</p>
+	    <h1>Machu Picchu</h1>
+	    <p>This Incan site near Cuzco, Peru, was “discovered” in 1911 by Hiram Bingham, who believed it was Vilcabamba, a secret Incan stronghold used during the 16th-century rebellion against Spanish rule. Although that claim was later disproved, the purpose of Machu Picchu has confounded scholars. Bingham believed it was home to the “Virgins of the Sun,” women who lived in convents under a vow of chastity. Others think that it was likely a pilgrimage site, while some believe it was a royal retreat. (One thing it apparently should not be is the site of a beer commercial. In 2000 a crane being used for such an ad fell and cracked a monument.) What is known is that Machu Picchu is one of the few major pre-Columbian ruins found nearly intact. Despite its relative isolation high in the Andes Mountains, it features agricultural terraces, plazas, residential areas, and temples.</p>
 	</div>
 
 	<!--Info-->
 	<div>
-	    <ul>
-		<li><a href = "GizaPage.html"><b>Pyramid of Giza</button></b></a></li>
-		<li><a href = "GreatWallPage.html"><b>Great wall of China</b></a></li>
-		<li><a href = "PetraPage.html"><b>Petra</b></a></li>
-		<li><a href = "ColosseumPage.html"><b>The Colosseum</b></a></li>
-		<li><a href = "ItzáPage.html"><b>Chichén Itzá</b></a></li>
-		<li><a href = "PicchuPage.html"><b>Machu Picchu</b></a></li>
-		<li><a href = "MahalPage.html"><b>Taj Mahal</b></a></li>
-		<li><a href = "RedeemerPage.html"><b>Chirst the Redeemer</b></a></li>
-	    </ul>
 	</div>
 
 	<!--Images-->
