--- a/Website/Wonders of the world/ColosseumPage.html
+++ b/Website/Wonders of the world/ColosseumPage.html
@@ -26,22 +26,12 @@
 
 	<!--Main info-->
 	<div>
-	    <h1>Description on the Seven Wonders of the World</h1>
-	    <p>In 2000 a Swiss foundation launched a campaign to determine the New Seven Wonders of the World. Given that the original Seven Wonders list was compiled in the 2nd century BCE—and that only one entrant is still standing (the Pyramids of Giza)—it seemed time for an update. And people around the world apparently agreed, as more than 100 million votes were cast on the Internet or by text messaging. The final results, which were announced in 2007, were met with cheers as well as some jeers—a number of prominent contenders, such as Athens’s Acropolis, failed to make the cut. Do you agree with the new list?</p>
+	    <h1>Colosseum</h1>
+	    <p>The Colosseum in Rome was built in the first century by order of the Emperor Vespasian. A feat of engineering, the amphitheater measures 620 by 513 feet (189 by 156 meters) and features a complex system of vaults. It was capable of holding 50,000 spectators, who watched a variety of events. Perhaps most notable were gladiator fights, though men battling animals was also common. In addition, water was sometimes pumped into the Colosseum for mock naval engagements. However, the belief that Christians were martyred there—namely, by being thrown to lions—is debated. According to some estimates, about 500,000 people died in the Colosseum. Additionally, so many animals were captured and then killed there that certain species reportedly became extinct.</p>
 	</div>
 
 	<!--Info-->
 	<div>
-	    <ul>
-		<li><a href = "GizaPage.html"><b>Pyramid of Giza</button></b></a></li>
-		<li><a href = "GreatWallPage.html"><b>Great wall of China</b></a></li>
-		<li><a href = "PetraPage.html"><b>Petra</b></a></li>
-		<li><a href = "ColosseumPage.html"><b>The Colosseum</b></a></li>
-		<li><a href = "ItzáPage.html"><b>Chichén Itzá</b></a></li>
-		<li><a href = "PicchuPage.html"><b>Machu Picchu</b></a></li>
-		<li><a href = "MahalPage.html"><b>Taj Mahal</b></a></li>
-		<li><a href = "RedeemerPage.html"><b>Chirst the Redeemer</b></a></li>
-	    </ul>
 	</div>
 
 	<!--Images-->
