--- a/Website/Wonders of the world/MahalPage.html
+++ b/Website/Wonders of the world/MahalPage.html
@@ -26,22 +26,12 @@
 
 	<!--Main info-->
 	<div>
-	    <h1>Description on the Seven Wonders of the World</h1>
-	    <p>In 2000 a Swiss foundation launched a campaign to determine the New Seven Wonders of the World. Given that the original Seven Wonders list was compiled in the 2nd century BCE—and that only one entrant is still standing (the Pyramids of Giza)—it seemed time for an update. And people around the world apparently agreed, as more than 100 million votes were cast on the Internet or by text messaging. The final results, which were announced in 2007, were met with cheers as well as some jeers—a number of prominent contenders, such as Athens’s Acropolis, failed to make the cut. Do you agree with the new list?</p>
+	    <h1>Taj Mahal</h1>
+	    <p>This mausoleum complex in Agra, India, is regarded as one of the world’s most iconic monuments and is perhaps the finest example of Mughal architecture. It was built by Emperor Shah Jahān (reigned 1628–58) to honor his wife Mumtāz Maḥal (“Chosen One of the Palace”), who died in 1631 giving birth to their 14th child. It took about 22 years and 20,000 workers to construct the complex, which includes an immense garden with a reflecting pool. The mausoleum is made of white marble that features semiprecious stones in geometric and floral patterns. Its majestic central dome is surrounded by four smaller domes. According to some reports, Shah Jahān wished to have his own mausoleum made out of black marble. However, he was deposed by one of his sons before any work began.</p>
 	</div>
 
 	<!--Info-->
 	<div>
-	    <ul>
-		<li><a href = "GizaPage.html"><b>Pyramid of Giza</button></b></a></li>
-		<li><a href = "GreatWallPage.html"><b>Great wall of China</b></a></li>
-		<li><a href = "PetraPage.html"><b>Petra</b></a></li>
-		<li><a href = "ColosseumPage.html"><b>The Colosseum</b></a></li>
-		<li><a href = "ItzáPage.html"><b>Chichén Itzá</b></a></li>
-		<li><a href = "PicchuPage.html"><b>Machu Picchu</b></a></li>
-		<li><a href = "MahalPage.html"><b>Taj Mahal</b></a></li>
-		<li><a href = "RedeemerPage.html"><b>Chirst the Redeemer</b></a></li>
-	    </ul>
 	</div>
 
 	<!--Images-->
