--- a/Website/Wonders of the world/RedeemerPage.html
+++ b/Website/Wonders of the world/RedeemerPage.html
@@ -2,7 +2,7 @@
 <html>
     <head>
 	<script src = "Wonders.js"> </script>
-	<link rel = "stylesheet" src = "Wonders.css">
+	<link rel = "stylesheet" href = "Wonders.css">
     </head>
     <body>
 	<header>
