Added images and changed css.

--- a/Website/Wonders of the world/ColosseumPage.html
+++ b/Website/Wonders of the world/ColosseumPage.html
@@ -1,45 +1,52 @@
 <!DOCTYPE = HTML>
 <html>
     <head>
-	<script src = "Wonders.js"> </script>
-	<link rel = "stylesheet" href = "Wonders.css">
+		<title>New Seven Wonders of the World</title>
+		<script src = "Wonders.js"> </script>
+		<link rel = "stylesheet" href = "Wonders.css">
     </head>
     <body>
 	<header>
-	    <p>Welcome, lets see the New Seven Wonders of the World!</p>
+			<h1>Welcome, lets see the New Seven Wonders of the World!</h1>	
+		<nav>
+			<button type = "button" onclick = "location.href ='MainPage.html';">Home</button>
+			<button type = "button" onclick = "location.href='GizaPage.html';">Pyramid of Giza</button>
+			<button type = "button" onclick = "location.href ='GreatWallPage.html';">Great wall of China</button>
+			<button type = "button" onclick = "location.href ='PetraPage.html';">Petra</button>
+			<button type = "button" onclick = "location.href ='ColosseumPage.html';">The Colosseum</button>
+			<button type = "button" onclick = "location.href ='ItzáPage.html';">Chichén Itzá</button>
+			<button type = "button" onclick = "location.href ='PicchuPage.html';">Machu Picchu</button>
+			<button type = "button" onclick = "location.href ='MahalPage.html';">Taj Mahal</button>
+			<button type = "button" onclick = "location.href ='RedeemerPage.html';">Chirst the Redeemer</button>
+			<button type = "button" onclick = "location.href ='FormPage.html';">Form</button>
+		</nav>
 	</header>
-	
-	<nav>
-	    <button type = "button" onclick = "location.href ='MainPage.html';">Home</button>
-	    <button type = "button" onclick = "location.href='GizaPage.html';">Pyramid of Giza</button>
-	    <button type = "button" onclick = "location.href ='GreatWallPage.html';">Great wall of China</button>
-	    <button type = "button" onclick = "location.href ='PetraPage.html';">Petra</button>
-	    <button type = "button" onclick = "location.href ='ColosseumPage.html';">The Colosseum</button>
-	    <button type = "button" onclick = "location.href ='ItzáPage.html';">Chichén Itzá</button>
-	    <button type = "button" onclick = "location.href ='PicchuPage.html';">Machu Picchu</button>
-	    <button type = "button" onclick = "location.href ='MahalPage.html';">Taj Mahal</button>
-	    <button type = "button" onclick = "location.href ='RedeemerPage.html';">Chirst the Redeemer</button>
-	    <button type = "button" onclick = "location.href ='FormPage.html';">Form</button>
-	</nav>
 
 	<hr>
 
 	<!--Main info-->
 	<div>
-	    <h1>Colosseum</h1>
-	    <p>The Colosseum in Rome was built in the first century by order of the Emperor Vespasian. A feat of engineering, the amphitheater measures 620 by 513 feet (189 by 156 meters) and features a complex system of vaults. It was capable of holding 50,000 spectators, who watched a variety of events. Perhaps most notable were gladiator fights, though men battling animals was also common. In addition, water was sometimes pumped into the Colosseum for mock naval engagements. However, the belief that Christians were martyred there—namely, by being thrown to lions—is debated. According to some estimates, about 500,000 people died in the Colosseum. Additionally, so many animals were captured and then killed there that certain species reportedly became extinct.</p>
+		<h1>Colosseum</h1>
+		<p>The Colosseum in Rome was built in the first century by order of the Emperor Vespasian. A feat of engineering, the amphitheater measures 620 by 513 feet (189 by 156 meters) and features a complex system of vaults. It was capable of holding 50,000 spectators, who watched a variety of events. Perhaps most notable were gladiator fights, though men battling animals was also common. In addition, water was sometimes pumped into the Colosseum for mock naval engagements. However, the belief that Christians were martyred there—namely, by being thrown to lions—is debated. According to some estimates, about 500,000 people died in the Colosseum. Additionally, so many animals were captured and then killed there that certain species reportedly became extinct.</p>
 	</div>
 
 	<!--Info-->
 	<div>
-	</div>
-
-	<!--Images-->
-	<div>
+		<img src = "https://cdn.britannica.com/36/162636-050-932C5D49/Colosseum-Rome-Italy.jpg?w=1000" alt = "Image of the Colosseum" width = "300" height = "225">
+		<table>
+                <tr>
+                    <th>Data</th>
+                    <th>Type</th>
+                </tr>
+                <tr>
+                    <td>Data1</td>
+                    <td>Type1</td>
+                </tr>
+		</table>
 	</div>
 
 	<footer>
-	    <p>If you have any website suggestions you would like to see please email them at reesehe@gmail.com or fill in this <a href = FormPage.html>form</a></p>
+		<p>If you have any website suggestions you would like to see please email them at reesehe@gmail.com or fill in this <a href = FormPage.html>form</a></p>
 	</footer>
     </body>
 </html>
