--- a/Website/Wonders of the world/GizaPage.html
+++ b/Website/Wonders of the world/GizaPage.html
@@ -1,48 +1,55 @@
 <!DOCTYPE = HTML>
 <html>
     <head>
-	<script src = "Wonders.js"> </script>
-	<link rel = "stylesheet" href = "Wonders.css">
+		<title>New Seven Wonders of the World</title>
+		<script src = "Wonders.js"> </script>
+		<link rel = "stylesheet" href = "Wonders.css">
     </head>
     <body>
 	<header>
-	    <p>Welcome, lets see the New Seven Wonders of the World!</p>
+			<h1>Welcome, lets see the New Seven Wonders of the World!</h1>	
+		<nav>
+			<button type = "button" onclick = "location.href ='MainPage.html';">Home</button>
+			<button type = "button" onclick = "location.href='GizaPage.html';">Pyramid of Giza</button>
+			<button type = "button" onclick = "location.href ='GreatWallPage.html';">Great wall of China</button>
+			<button type = "button" onclick = "location.href ='PetraPage.html';">Petra</button>
+			<button type = "button" onclick = "location.href ='ColosseumPage.html';">The Colosseum</button>
+			<button type = "button" onclick = "location.href ='ItzáPage.html';">Chichén Itzá</button>
+			<button type = "button" onclick = "location.href ='PicchuPage.html';">Machu Picchu</button>
+			<button type = "button" onclick = "location.href ='MahalPage.html';">Taj Mahal</button>
+			<button type = "button" onclick = "location.href ='RedeemerPage.html';">Chirst the Redeemer</button>
+			<button type = "button" onclick = "location.href ='FormPage.html';">Form</button>
+		</nav>
 	</header>
-	
-	<nav>
-	    <button type = "button" onclick = "location.href ='MainPage.html';">Home</button>
-	    <button type = "button" onclick = "location.href='GizaPage.html';">Pyramid of Giza</button>
-	    <button type = "button" onclick = "location.href ='GreatWallPage.html';">Great wall of China</button>
-	    <button type = "button" onclick = "location.href ='PetraPage.html';">Petra</button>
-	    <button type = "button" onclick = "location.href ='ColosseumPage.html';">The Colosseum</button>
-	    <button type = "button" onclick = "location.href ='ItzáPage.html';">Chichén Itzá</button>
-	    <button type = "button" onclick = "location.href ='PicchuPage.html';">Machu Picchu</button>
-	    <button type = "button" onclick = "location.href ='MahalPage.html';">Taj Mahal</button>
-	    <button type = "button" onclick = "location.href ='RedeemerPage.html';">Chirst the Redeemer</button>
-	    <button type = "button" onclick = "location.href ='FormPage.html';">Form</button>
-	</nav>
 
 	<hr>
 
 	<!--Main info-->
 	<div>
-	    <h1>Pyramid of Giza</h1>
-	    <h2>Aparrently this is not on the list but the PowerPoint says to include this</h2>
-	    <p>Pyramids of Giza, three 4th-dynasty (c. 2575–c. 2465 bce) pyramids erected on a rocky plateau on the west bank of the Nile River near Al-Jīzah (Giza) in northern Egypt. In ancient times they were included among the Seven Wonders of the World. The ancient ruins of the Memphis area, including the Pyramids of Giza, Ṣaqqārah, Dahshūr, Abū Ruwaysh, and Abū Ṣīr, were collectively designated a UNESCO World Heritage site in 1979.
+		<h1>Pyramid of Giza</h1>
+		<h2>Aparrently this is not on the list but the PowerPoint says to include this</h2>
+		<p>Pyramids of Giza, three 4th-dynasty (c. 2575–c. 2465 bce) pyramids erected on a rocky plateau on the west bank of the Nile River near Al-Jīzah (Giza) in northern Egypt. In ancient times they were included among the Seven Wonders of the World. The ancient ruins of the Memphis area, including the Pyramids of Giza, Ṣaqqārah, Dahshūr, Abū Ruwaysh, and Abū Ṣīr, were collectively designated a UNESCO World Heritage site in 1979.
 <br><br>
 The designations of the pyramids—Khufu, Khafre, and Menkaure—correspond to the kings for whom they were built. The northernmost and oldest pyramid of the group was built for Khufu (Greek: Cheops), the second king of the 4th dynasty. Called the Great Pyramid, it is the largest of the three, the length of each side at the base averaging 755.75 feet (230 meters) and its original height being 481.4 feet (147 meters). The middle pyramid was built for Khafre (Greek: Chephren), the fourth of the eight kings of the 4th dynasty; the structure measures 707.75 feet (216 meters) on each side and was originally 471 feet (143 meters) high. The southernmost and last pyramid to be built was that of Menkaure (Greek: Mykerinus), the fifth king of the 4th dynasty; each side measures 356.5 feet (109 meters), and the structure’s completed height was 218 feet (66 meters). All three pyramids were plundered both internally and externally in ancient and medieval times. Thus, the grave goods originally deposited in the burial chambers are missing, and the pyramids no longer reach their original heights because they have been almost entirely stripped of their outer casings of smooth white limestone; the Great Pyramid, for example, is now only 451.4 feet (138 meters) high. That of Khafre retains the outer limestone casing only at its topmost portion. Constructed near each pyramid was a mortuary temple, which was linked via a sloping causeway to a valley temple on the edge of the Nile floodplain. Also nearby were subsidiary pyramids used for the burials of other members of the royal family.</p>
 	</div>
 
 	<!--Info-->
 	<div>
-	</div>
-
-	<!--Images-->
-	<div>
+		<img src = "https://cdn.britannica.com/39/155939-050-A709B5D7/Pyramids-Giza-Cairo-Egypt.jpg?w=300" alt = "Image of Pyramid of Giza" width = "300" height = "225">
+		<table>
+                <tr>
+                    <th>Data</th>
+                    <th>Type</th>
+                </tr>
+                <tr>
+                    <td>Data1</td>
+                    <td>Type1</td>
+                </tr>
+		</table>
 	</div>
 
 	<footer>
-	    <p>If you have any website suggestions you would like to see please email them at reesehe@gmail.com or fill in this <a href = FormPage.html>form</a></p>
+		<p>If you have any website suggestions you would like to see please email them at reesehe@gmail.com or fill in this <a href = FormPage.html>form</a></p>
 	</footer>
     </body>
 </html>
