--- a/Website/Wonders of the world/PetraPage.html
+++ b/Website/Wonders of the world/PetraPage.html
@@ -1,45 +1,52 @@
 <!DOCTYPE = HTML>
 <html>
     <head>
-	<script src = "Wonders.js"> </script>
-	<link rel = "stylesheet" href = "Wonders.css">
+		<title>New Seven Wonders of the World</title>
+		<script src = "Wonders.js"> </script>
+		<link rel = "stylesheet" href = "Wonders.css">
     </head>
     <body>
 	<header>
-	    <p>Welcome, lets see the New Seven Wonders of the World!</p>
+			<h1>Welcome, lets see the New Seven Wonders of the World!</h1>	
+		<nav>
+			<button type = "button" onclick = "location.href ='MainPage.html';">Home</button>
+			<button type = "button" onclick = "location.href='GizaPage.html';">Pyramid of Giza</button>
+			<button type = "button" onclick = "location.href ='GreatWallPage.html';">Great wall of China</button>
+			<button type = "button" onclick = "location.href ='PetraPage.html';">Petra</button>
+			<button type = "button" onclick = "location.href ='ColosseumPage.html';">The Colosseum</button>
+			<button type = "button" onclick = "location.href ='ItzáPage.html';">Chichén Itzá</button>
+			<button type = "button" onclick = "location.href ='PicchuPage.html';">Machu Picchu</button>
+			<button type = "button" onclick = "location.href ='MahalPage.html';">Taj Mahal</button>
+			<button type = "button" onclick = "location.href ='RedeemerPage.html';">Chirst the Redeemer</button>
+			<button type = "button" onclick = "location.href ='FormPage.html';">Form</button>
+		</nav>
 	</header>
-	
-	<nav>
-	    <button type = "button" onclick = "location.href ='MainPage.html';">Home</button>
-	    <button type = "button" onclick = "location.href='GizaPage.html';">Pyramid of Giza</button>
-	    <button type = "button" onclick = "location.href ='GreatWallPage.html';">Great wall of China</button>
-	    <button type = "button" onclick = "location.href ='PetraPage.html';">Petra</button>
-	    <button type = "button" onclick = "location.href ='ColosseumPage.html';">The Colosseum</button>
-	    <button type = "button" onclick = "location.href ='ItzáPage.html';">Chichén Itzá</button>
-	    <button type = "button" onclick = "location.href ='PicchuPage.html';">Machu Picchu</button>
-	    <button type = "button" onclick = "location.href ='MahalPage.html';">Taj Mahal</button>
-	    <button type = "button" onclick = "location.href ='RedeemerPage.html';">Chirst the Redeemer</button>
-	    <button type = "button" onclick = "location.href ='FormPage.html';">Form</button>
-	</nav>
 
 	<hr>
 
 	<!--Main info-->
 	<div>
-	    <h1>Petra</h1>
-	    <p>The ancient city of Petra, Jordan, is located in a remote valley, nestled among sandstone mountains and cliffs. It was purported to be one of the places where Moses struck a rock and water gushed forth. Later the Nabataeans, an Arab tribe, made it their capital, and during this time it flourished, becoming an important trade center, especially for spices. Noted carvers, the Nabataeans chiseled dwellings, temples, and tombs into the sandstone, which changed color with the shifting sun. In addition, they constructed a water system that allowed for lush gardens and farming. At its height, Petra reportedly had a population of 30,000. The city began to decline, however, as trade routes shifted. A major earthquake in 363 CE caused more difficulty, and after another tremor hit in 551, Petra was gradually abandoned. Although rediscovered in 1912, it was largely ignored by archaeologists until the late 20th century, and many questions remain about the city.</p>
+		<h1>Petra</h1>
+		<p>The ancient city of Petra, Jordan, is located in a remote valley, nestled among sandstone mountains and cliffs. It was purported to be one of the places where Moses struck a rock and water gushed forth. Later the Nabataeans, an Arab tribe, made it their capital, and during this time it flourished, becoming an important trade center, especially for spices. Noted carvers, the Nabataeans chiseled dwellings, temples, and tombs into the sandstone, which changed color with the shifting sun. In addition, they constructed a water system that allowed for lush gardens and farming. At its height, Petra reportedly had a population of 30,000. The city began to decline, however, as trade routes shifted. A major earthquake in 363 CE caused more difficulty, and after another tremor hit in 551, Petra was gradually abandoned. Although rediscovered in 1912, it was largely ignored by archaeologists until the late 20th century, and many questions remain about the city.</p>
 	</div>
 
 	<!--Info-->
 	<div>
-	</div>
-
-	<!--Images-->
-	<div>
+		<img src = "https://cdn.britannica.com/25/153525-050-FC43840D/Khaznah-Petra-Jordan.jpg?w=1000" alt = "Image of Petra" width = "300" height = "225">
+		<table>
+                <tr>
+                    <th>Data</th>
+                    <th>Type</th>
+                </tr>
+                <tr>
+                    <td>Data1</td>
+                    <td>Type1</td>
+                </tr>
+		</table>
 	</div>
 
 	<footer>
-	    <p>If you have any website suggestions you would like to see please email them at reesehe@gmail.com or fill in this <a href = FormPage.html>form</a></p>
+		<p>If you have any website suggestions you would like to see please email them at reesehe@gmail.com or fill in this <a href = FormPage.html>form</a></p>
 	</footer>
     </body>
 </html>
