--- a/Website/Wonders of the world/FormPage.html
+++ b/Website/Wonders of the world/FormPage.html
@@ -1,33 +1,32 @@
 <!DOCTYPE = HTML>
 <html>
     <head>
-	<script src = "Wonders.js"> </script>
-	<link rel = "stylesheet" href = "Wonders.css">
+		<title>New Seven Wonders of the World</title>
+		<script src = "Wonders.js"> </script>
+		<link rel = "stylesheet" href = "Wonders.css">
     </head>
     <body>
 	<header>
-	    <p>Welcome, lets see the New Seven Wonders of the World!</p>
+			<h1>Welcome, lets see the New Seven Wonders of the World!</h1>	
+		<nav>
+			<button type = "button" onclick = "location.href ='MainPage.html';">Home</button>
+			<button type = "button" onclick = "location.href='GizaPage.html';">Pyramid of Giza</button>
+			<button type = "button" onclick = "location.href ='GreatWallPage.html';">Great wall of China</button>
+			<button type = "button" onclick = "location.href ='PetraPage.html';">Petra</button>
+			<button type = "button" onclick = "location.href ='ColosseumPage.html';">The Colosseum</button>
+			<button type = "button" onclick = "location.href ='ItzáPage.html';">Chichén Itzá</button>
+			<button type = "button" onclick = "location.href ='PicchuPage.html';">Machu Picchu</button>
+			<button type = "button" onclick = "location.href ='MahalPage.html';">Taj Mahal</button>
+			<button type = "button" onclick = "location.href ='RedeemerPage.html';">Chirst the Redeemer</button>
+			<button type = "button" onclick = "location.href ='FormPage.html';">Form</button>
+		</nav>
 	</header>
-	
-	<nav>
-	    <button type = "button" onclick = "location.href ='MainPage.html';">Home</button>
-	    <button type = "button" onclick = "location.href='GizaPage.html';">Pyramid of Giza</button>
-	    <button type = "button" onclick = "location.href ='GreatWallPage.html';">Great wall of China</button>
-	    <button type = "button" onclick = "location.href ='PetraPage.html';">Petra</button>
-	    <button type = "button" onclick = "location.href ='ColosseumPage.html';">The Colosseum</button>
-	    <button type = "button" onclick = "location.href ='ItzáPage.html';">Chichén Itzá</button>
-	    <button type = "button" onclick = "location.href ='PicchuPage.html';">Machu Picchu</button>
-	    <button type = "button" onclick = "location.href ='MahalPage.html';">Taj Mahal</button>
-	    <button type = "button" onclick = "location.href ='RedeemerPage.html';">Chirst the Redeemer</button>
-	    <button type = "button" onclick = "location.href ='FormPage.html';">Form</button>
-	</nav>
 
 	<hr>
 
 	<!--Main info-->
 	<div>
-	    <p>All information sourced from <a href = "https://www.britannica.com/list/new-seven-wonders-of-the-world">Britanica's page on the New Seven Wonders of the World</a>, images sourced form google searches</p>
-	    <h1>Please send some feedback or your own experiences on your travels (can be any!) :}</h1>
+		<h1>Please send some feedback or your own experiences on your travels (can be any!) :}</h1>
 	</div>
 
 	<!--Form : 
@@ -37,23 +36,24 @@
  - Date of visit
  - Message-->
 	<form>
-	    <label name = "Form" for = "FirstNameTB">First name : </label>
-	    <input name = "Form" id = "FirstNameTB">
-	    <label name = "Form" for = "SecondNameTB">Second name : </label>
-	    <input name = "Form" id = "SecondNameTB">
+		<label name = "Form" for = "FirstNameTB">First name : </label>
+		<input name = "Form" id = "FirstNameTB">
+		<label name = "Form" for = "SecondNameTB">Second name : </label>
+		<input name = "Form" id = "SecondNameTB">
 
-	    <label name = "Form" for = "EmailAddress">Email address : </label>
-	    <input name = "Form" id = "EmailAddress" type = "email">
-	    <label name = "Form" for = "DateOfVisit">Date of Visit : </label>
-	    <input name = "Form" id = "DateOfVisit" type = "date" min = "01/01/1900"> <!--Cannot get function to get current data for value and max working-->
+		<label name = "Form" for = "EmailAddress">Email address : </label>
+		<input name = "Form" id = "EmailAddress" type = "email">
+		<label name = "Form" for = "DateOfVisit">Date of Visit : </label>
+		<input name = "Form" id = "DateOfVisit" type = "date" min = "01/01/1900"> <!--Cannot get function to get current data for value and max working-->
 
-	    <textarea name = "Form" rows = "4" cols = "100">Put down your experiences at these wonders, anywhere else or just a little bit of feeback</textarea>
+		<textarea name = "Form" rows = "4" cols = "100" placeholder = "Put down your experiences at these wonders, anywhere else or just a little bit of feeback"></textarea>
 
-	    <button name = "Form" onclick = "alert('Form complete')">Submit Form</button>
+		<button name = "Form" onclick = "alert('Form complete')">Submit Form</button>
 	</form>
-
+	
 	<footer>
-	    <p>If you have any website suggestions you would like to see please email them at reesehe@gmail.com or fill in this <a href = FormPage.html>form</a></p>
+		<p>All information sourced from <a href = "https://www.britannica.com/list/new-seven-wonders-of-the-world">Britanica's page on the New Seven Wonders of the World</a>, images sourced form google searches</p>
+		<p>If you have any website suggestions you would like to see please email them at reesehe@gmail.com or fill in this <a href = FormPage.html>form</a></p>
 	</footer>
     </body>
 </html>
