--- a/Website/Wonders of the world/PicchuPage.html
+++ b/Website/Wonders of the world/PicchuPage.html
@@ -1,45 +1,52 @@
 <!DOCTYPE = HTML>
 <html>
     <head>
-	<script src = "Wonders.js"> </script>
-	<link rel = "stylesheet" href = "Wonders.css">
+		<title>New Seven Wonders of the World</title>
+		<script src = "Wonders.js"> </script>
+		<link rel = "stylesheet" href = "Wonders.css">
     </head>
     <body>
 	<header>
-	    <p>Welcome, lets see the New Seven Wonders of the World!</p>
+			<h1>Welcome, lets see the New Seven Wonders of the World!</h1>	
+		<nav>
+			<button type = "button" onclick = "location.href ='MainPage.html';">Home</button>
+			<button type = "button" onclick = "location.href='GizaPage.html';">Pyramid of Giza</button>
+			<button type = "button" onclick = "location.href ='GreatWallPage.html';">Great wall of China</button>
+			<button type = "button" onclick = "location.href ='PetraPage.html';">Petra</button>
+			<button type = "button" onclick = "location.href ='ColosseumPage.html';">The Colosseum</button>
+			<button type = "button" onclick = "location.href ='ItzáPage.html';">Chichén Itzá</button>
+			<button type = "button" onclick = "location.href ='PicchuPage.html';">Machu Picchu</button>
+			<button type = "button" onclick = "location.href ='MahalPage.html';">Taj Mahal</button>
+			<button type = "button" onclick = "location.href ='RedeemerPage.html';">Chirst the Redeemer</button>
+			<button type = "button" onclick = "location.href ='FormPage.html';">Form</button>
+		</nav>
 	</header>
-	
-	<nav>
-	    <button type = "button" onclick = "location.href ='MainPage.html';">Home</button>
-	    <button type = "button" onclick = "location.href='GizaPage.html';">Pyramid of Giza</button>
-	    <button type = "button" onclick = "location.href ='GreatWallPage.html';">Great wall of China</button>
-	    <button type = "button" onclick = "location.href ='PetraPage.html';">Petra</button>
-	    <button type = "button" onclick = "location.href ='ColosseumPage.html';">The Colosseum</button>
-	    <button type = "button" onclick = "location.href ='ItzáPage.html';">Chichén Itzá</button>
-	    <button type = "button" onclick = "location.href ='PicchuPage.html';">Machu Picchu</button>
-	    <button type = "button" onclick = "location.href ='MahalPage.html';">Taj Mahal</button>
-	    <button type = "button" onclick = "location.href ='RedeemerPage.html';">Chirst the Redeemer</button>
-	    <button type = "button" onclick = "location.href ='FormPage.html';">Form</button>
-	</nav>
 
 	<hr>
 
 	<!--Main info-->
 	<div>
-	    <h1>Machu Picchu</h1>
-	    <p>This Incan site near Cuzco, Peru, was “discovered” in 1911 by Hiram Bingham, who believed it was Vilcabamba, a secret Incan stronghold used during the 16th-century rebellion against Spanish rule. Although that claim was later disproved, the purpose of Machu Picchu has confounded scholars. Bingham believed it was home to the “Virgins of the Sun,” women who lived in convents under a vow of chastity. Others think that it was likely a pilgrimage site, while some believe it was a royal retreat. (One thing it apparently should not be is the site of a beer commercial. In 2000 a crane being used for such an ad fell and cracked a monument.) What is known is that Machu Picchu is one of the few major pre-Columbian ruins found nearly intact. Despite its relative isolation high in the Andes Mountains, it features agricultural terraces, plazas, residential areas, and temples.</p>
+		<h1>Machu Picchu</h1>
+		<p>This Incan site near Cuzco, Peru, was “discovered” in 1911 by Hiram Bingham, who believed it was Vilcabamba, a secret Incan stronghold used during the 16th-century rebellion against Spanish rule. Although that claim was later disproved, the purpose of Machu Picchu has confounded scholars. Bingham believed it was home to the “Virgins of the Sun,” women who lived in convents under a vow of chastity. Others think that it was likely a pilgrimage site, while some believe it was a royal retreat. (One thing it apparently should not be is the site of a beer commercial. In 2000 a crane being used for such an ad fell and cracked a monument.) What is known is that Machu Picchu is one of the few major pre-Columbian ruins found nearly intact. Despite its relative isolation high in the Andes Mountains, it features agricultural terraces, plazas, residential areas, and temples.</p>
 	</div>
 
 	<!--Info-->
 	<div>
-	</div>
-
-	<!--Images-->
-	<div>
+		<img src = "https://cdn.britannica.com/30/94530-050-99493FEA/Machu-Picchu.jpg?w=1000" alt = "Image of Machu Picchu" width = "300" height = "225">
+		<table>
+                <tr>
+                    <th>Data</th>
+                    <th>Type</th>
+                </tr>
+                <tr>
+                    <td>Data1</td>
+                    <td>Type1</td>
+                </tr>
+		</table>
 	</div>
 
 	<footer>
-	    <p>If you have any website suggestions you would like to see please email them at reesehe@gmail.com or fill in this <a href = FormPage.html>form</a></p>
+		<p>If you have any website suggestions you would like to see please email them at reesehe@gmail.com or fill in this <a href = FormPage.html>form</a></p>
 	</footer>
     </body>
 </html>
