--- a/Website/Wonders of the world/RedeemerPage.html
+++ b/Website/Wonders of the world/RedeemerPage.html
@@ -1,45 +1,52 @@
 <!DOCTYPE = HTML>
 <html>
     <head>
-	<script src = "Wonders.js"> </script>
-	<link rel = "stylesheet" href = "Wonders.css">
+		<title>New Seven Wonders of the World</title>
+		<script src = "Wonders.js"> </script>
+		<link rel = "stylesheet" href = "Wonders.css">
     </head>
     <body>
 	<header>
-	    <p>Welcome, lets see the New Seven Wonders of the World!</p>
+			<h1>Welcome, lets see the New Seven Wonders of the World!</h1>	
+		<nav>
+			<button type = "button" onclick = "location.href ='MainPage.html';">Home</button>
+			<button type = "button" onclick = "location.href='GizaPage.html';">Pyramid of Giza</button>
+			<button type = "button" onclick = "location.href ='GreatWallPage.html';">Great wall of China</button>
+			<button type = "button" onclick = "location.href ='PetraPage.html';">Petra</button>
+			<button type = "button" onclick = "location.href ='ColosseumPage.html';">The Colosseum</button>
+			<button type = "button" onclick = "location.href ='ItzáPage.html';">Chichén Itzá</button>
+			<button type = "button" onclick = "location.href ='PicchuPage.html';">Machu Picchu</button>
+			<button type = "button" onclick = "location.href ='MahalPage.html';">Taj Mahal</button>
+			<button type = "button" onclick = "location.href ='RedeemerPage.html';">Chirst the Redeemer</button>
+			<button type = "button" onclick = "location.href ='FormPage.html';">Form</button>
+		</nav>
 	</header>
-	
-	<nav>
-	    <button type = "button" onclick = "location.href ='MainPage.html';">Home</button>
-	    <button type = "button" onclick = "location.href='GizaPage.html';">Pyramid of Giza</button>
-	    <button type = "button" onclick = "location.href ='GreatWallPage.html';">Great wall of China</button>
-	    <button type = "button" onclick = "location.href ='PetraPage.html';">Petra</button>
-	    <button type = "button" onclick = "location.href ='ColosseumPage.html';">The Colosseum</button>
-	    <button type = "button" onclick = "location.href ='ItzáPage.html';">Chichén Itzá</button>
-	    <button type = "button" onclick = "location.href ='PicchuPage.html';">Machu Picchu</button>
-	    <button type = "button" onclick = "location.href ='MahalPage.html';">Taj Mahal</button>
-	    <button type = "button" onclick = "location.href ='RedeemerPage.html';">Chirst the Redeemer</button>
-	    <button type = "button" onclick = "location.href ='FormPage.html';">Form</button>
-	</nav>
 
 	<hr>
 
 	<!--Main info-->
 	<div>
-	    <h1>Christ the Redeemer</h1>
-	    <p>Christ the Redeemer, a colossal statue of Jesus, stands atop Mount Corcovado in Rio de Janeiro. Its origins date to just after World War I, when some Brazilians feared a “tide of godlessness.” They proposed a statue, which was ultimately designed by Heitor da Silva Costa, Carlos Oswald, and Paul Landowski. Construction began in 1926 and was completed five years later. The resulting monument stands 98 feet (30 meters) tall—not including its base, which is about 26 feet (8 meters) high—and its outstretched arms span 92 feet (28 meters). It is the largest Art Deco sculpture in the world. Christ the Redeemer is made of reinforced concrete and is covered in approximately six million tiles. Somewhat disconcertingly, the statue has often been struck by lightning, and in 2014 the tip of Jesus’s right thumb was damaged during a storm.</p>
+		<h1>Christ the Redeemer</h1>
+		<p>Christ the Redeemer, a colossal statue of Jesus, stands atop Mount Corcovado in Rio de Janeiro. Its origins date to just after World War I, when some Brazilians feared a “tide of godlessness.” They proposed a statue, which was ultimately designed by Heitor da Silva Costa, Carlos Oswald, and Paul Landowski. Construction began in 1926 and was completed five years later. The resulting monument stands 98 feet (30 meters) tall—not including its base, which is about 26 feet (8 meters) high—and its outstretched arms span 92 feet (28 meters). It is the largest Art Deco sculpture in the world. Christ the Redeemer is made of reinforced concrete and is covered in approximately six million tiles. Somewhat disconcertingly, the statue has often been struck by lightning, and in 2014 the tip of Jesus’s right thumb was damaged during a storm.</p>
 	</div>
 
 	<!--Info-->
 	<div>
-	</div>
-
-	<!--Images-->
-	<div>
+		<img src = "https://cdn.britannica.com/54/150754-050-5B93A950/statue-Christ-the-Redeemer-Rio-de-Janeiro.jpg?w=1000" alt = "Image of Christ the Redeemer" width = "300" height = "225">
+		<table>
+                <tr>
+                    <th>Data</th>
+                    <th>Type</th>
+                </tr>
+                <tr>
+                    <td>Data1</td>
+                    <td>Type1</td>
+                </tr>
+		</table>
 	</div>
 
 	<footer>
-	    <p>If you have any website suggestions you would like to see please email them at reesehe@gmail.com or fill in this <a href = FormPage.html>form</a></p>
+		<p>If you have any website suggestions you would like to see please email them at reesehe@gmail.com or fill in this <a href = FormPage.html>form</a></p>
 	</footer>
     </body>
 </html>
